// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UtilityMenu correctly applies the theme context className 1`] = `
<ContextProvider
  value={
    {
      "className": "orion-fusion-theme",
      "density": undefined,
      "name": undefined,
    }
  }
>
  <InjectIntl(UtilityMenu)
    initialSelectedKey="key"
    menuItems={
      [
        {
          "childKeys": [],
          "contentLocation": "footer",
          "isSelected": false,
          "key": "key",
          "title": "title",
        },
      ]
    }
    onChange={[MockFunction]}
    onDisclose={[MockFunction]}
    variant="header"
  />
</ContextProvider>
`;

exports[`UtilityMenu it should pass in a custom prop 1`] = `
<UtilityMenu
  id="test"
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelected": false,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  variant="header"
/>
`;

exports[`UtilityMenu it should render with a read-only menu item 1`] = `
<UtilityMenu
  id="test"
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isReadOnly": true,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  variant="header"
/>
`;

exports[`UtilityMenu should render with a user specified role 1`] = `
<UtilityMenu
  id="test"
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelected": false,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="menu"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  variant="header"
/>
`;

exports[`UtilityMenu should render with default props 1`] = `
<UtilityMenu
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelected": false,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  variant="header"
/>
`;

exports[`UtilityMenu should render with isHeightBounded 1`] = `
<UtilityMenu
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isHeightBounded={true}
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelected": false,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  variant="header"
/>
`;

exports[`UtilityMenu should render with onRequestClose set 1`] = `
<UtilityMenu
  initialSelectedKey="key"
  intl={
    {
      "defaultFormats": {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": {},
      "formatters": {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  menuItems={
    [
      {
        "childKeys": [],
        "contentLocation": "footer",
        "isSelected": false,
        "key": "key",
        "title": "title",
      },
    ]
  }
  menuRole="navigation"
  onChange={[MockFunction]}
  onDisclose={[MockFunction]}
  onRequestClose={[MockFunction]}
  variant="header"
/>
`;
